# ve.io-python-settings

./: .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  .pylintrc  README.md  mkdocs.yml  pyproject.toml
tests/: soma_test.py
