[tool.poetry]
name = "ve-io-python-settings"
version = "0.1.0"
description = ""
authors = ["Wesley Steve <wesley.silva23@hotmail.com>"]
readme = "README.md"
packages = [{include = "ve"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79